--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,12 +24,6 @@ jobs:
       with:
         go-version: '1.22.0'
 
-    - name: Install dependencies
-      run: go mod download
-
-    - name: Build
-      run: go build -v ./...
-
     - name: Test
       run: go test -cover ./...
 
@@ -63,17 +57,23 @@ jobs:
       with:
         go-version: '1.22.0'
 
-    - name: Install dependencies
-      run: |
-        cd storage/redis
-        go mod download
-
-    - name: Build 
-      run: |
-        cd storage/redis
-        go build -v ./...
-
     - name: Test
       run: |
         cd storage/redis
+        go test -cover ./...
+
+  sqlite3:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [ '1.22.x' ]
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+
+    - name: Test
+      run: |
+        cd storage/sqlite3
         go test -cover ./...
