--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,6 +12,9 @@ on:
 jobs:
 
   root:
+    permissions:
+      contents: read
+      pull-requests: write  
     runs-on: ubuntu-latest
     strategy:
       matrix:
